Bug 498184 - "Open terminal at this location" feature doesn't work on Windows
Summary: "Open terminal at this location" feature doesn't work on Windows
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.12.0
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-02 20:50 UTC by lolita002001
Modified: 2025-01-08 23:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lolita002001 2025-01-02 20:50:13 UTC
OS VERSIONS: Windows 11 24H2

SOFTWARE VERSIONS: FileLignt 24.12.1 (I don't have this option when submitting a report)

Reproducible: Always

Steps to Reproduce: Scan the contents of any folder. After the scan is introduced, right-click on the folder icon on the left or on the block in the fan chart on the right and click "Open terminal at this location"

Expected Results:  The Windows terminal is opened, and the current path is the previously selected folder path (I did not install konsole).

Actual Results: Windows Terminal is not opened
Comment 1 Bug Janitor Service 2025-01-07 14:07:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/filelight/-/merge_requests/163
Comment 2 Harald Sitter 2025-01-08 23:33:35 UTC
Git commit b40a524fb060f85bebad0b1cee7e81e02b3ee0b3 by Harald Sitter.
Committed on 07/01/2025 at 14:06.
Pushed by sitter into branch 'master'.

contextmenucontext: open terminal at local file path

for linux that makes no difference but on windows the `path()` is
`/C:/abc/` and won't start a terminal correctly. get the path as local
file path instead

M  +1    -1    src/contextMenuContext.cpp

https://invent.kde.org/utilities/filelight/-/commit/b40a524fb060f85bebad0b1cee7e81e02b3ee0b3
Comment 3 Harald Sitter 2025-01-08 23:40:08 UTC
Git commit 5ea963613565b8ed73f4d59bbeacbb4c0af5d397 by Harald Sitter.
Committed on 08/01/2025 at 23:34.
Pushed by sitter into branch 'release/24.12'.

contextmenucontext: open terminal at local file path

for linux that makes no difference but on windows the `path()` is
`/C:/abc/` and won't start a terminal correctly. get the path as local
file path instead


(cherry picked from commit b40a524fb060f85bebad0b1cee7e81e02b3ee0b3)

Co-authored-by: Harald Sitter <sitter@kde.org>

M  +1    -1    src/contextMenuContext.cpp

https://invent.kde.org/utilities/filelight/-/commit/5ea963613565b8ed73f4d59bbeacbb4c0af5d397