contextmenucontext: open terminal at local file path

for linux that makes no difference but on windows the `path()` is
`/C:/abc/` and won't start a terminal correctly. get the path as local
file path instead

BUG: 498184